# PR-Analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: api.py  main.py
backend/app/api/: dependencies.py  health.py  router.py
backend/app/api/v1/: router.py
backend/app/application/: pull_request_sync.py  repository_sync.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/github/: client.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  base.py  repository.py
backend/app/pull_request/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/repository/: models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 140baedbcdc2_create_repository_table.py  f6001bb00b8b_create_pull_request_table.py
backend/scripts/: test_github.py
frontend/: package.json
frontend/src/: main.tsx
infrastructure/: README.md
