[project]
name = "pr-analyzer-backend"
version = "0.1.0"
description = "Backend service for PR Analyzer"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.16",
    "pydantic-settings>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.1",
    "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]